# molview

./: README.md  pyproject.toml
molview/: selection.py  viewer.py
molview/templates/: viewer.html
